# ChangeLog for sys-apps/modutils
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/modutils/ChangeLog,v 1.42 2004/08/24 23:37:47 plasmaroo Exp $

*modutils-2.4.27 (25 Aug 2004)

  25 Aug 2004; <plasmaroo@gentoo.org> +modutils-2.4.27.ebuild:
  Version bump, closes bug #60975.

  18 Aug 2004; Aron Griffis <agriffis@gentoo.org> modutils-2.4.26.ebuild:
  stable on alpha and ia64

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> modutils-2.4.16-r2.ebuild,
  modutils-2.4.16-r3.ebuild, modutils-2.4.19.ebuild, modutils-2.4.20.ebuild,
  modutils-2.4.22.ebuild, modutils-2.4.23.ebuild, modutils-2.4.24.ebuild,
  modutils-2.4.25.ebuild:
  sync IUSE (missing), trim trailing whitespace

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> modutils-2.4.16-r2.ebuild:
  QA - fix use invocation

  19 May 2004; <solar@gentoo.org> modutils-2.4.26.ebuild:
  modutils-2.4.26 no longer needs to filter-flags -fPIC

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> modutils-2.4.26.ebuild:
  Add inherit eutils

  15 Apr 2004; Michael McCabe <randy@gentoo.org> modutils-2.4.26.ebuild:
  adding s390 keywords

*modutils-2.4.26 (02 Nov 2003)

  02 Nov 2003; Martin Schlemmer <azarah@gentoo.org> modutils-2.4.26.ebuild:
  Update version.  Some cleanups.

  10 Oct 2003; Alexander Gabert <pappy@gentoo.org> modutils-2.4.25.ebuild:
  filter-flags -fPIC will introduce -yet_exec for hardened-gcc

  09 Oct 2003; Alexander Gabert <pappy@gentoo.org> modutils-2.4.25.ebuild:
  changed hardened-gcc behaviour in respect to hppa

  08 Oct 2003; Alexander Gabert <pappy@gentoo.org> modutils-2.4.25.ebuild:
  hppa does not needs fstackprot with hcc

  25 Sep 2003; Alexander Gabert <pappy@gentoo.org> modutils-2.4.25.ebuild:
  bugfixes for hardened-gcc

  06 Sep 2003; Alexander Gabert <pappy@gentoo.org> modutils-2.4.25.ebuild:
  added hardened-gcc exclude flags

*modutils-2.4.25 (31 Mar 2003)
