@@ -1,23 +1,23 @@
-MD5 82a6556955ed4948b946cc4da694be46 ChangeLog 6387
-MD5 0ee6f4e6676a1f0545eece6ef409ea37 modutils-2.4.27.ebuild 1344
-MD5 d8c2da0f643f7ae231fc6e7da5930495 modutils-2.4.19.ebuild 1111
-MD5 dbd86e2c8c08370aa2e7dbe97f781f3c modutils-2.4.22.ebuild 1356
-MD5 bf58949867be5fb7d30192389e1e07d4 modutils-2.4.23.ebuild 1368
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 86e5de4d2c4b3c0ebdc6d1a1fa297a53 ChangeLog 6595
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-MD5 f610349417b2aa4b9ceb5f8e09b0168f modutils-2.4.16-r3.ebuild 1193
-MD5 d02ae2fed3e8f58340683ccc842b9ae1 modutils-2.4.20.ebuild 1026
-MD5 78b0243d2205e20caaf4063f4a3c51d1 modutils-2.4.26.ebuild 1339
-MD5 370bb6a823393381b55ceca17ca5ad5d modutils-2.4.25.ebuild 1331
-MD5 a511433e80a62e6ea40a56711f05199f modutils-2.4.16-r2.ebuild 1455
-MD5 e85f9b6596787a764d973b2eee0b843c modutils-2.4.24.ebuild 1327
-MD5 123430bcca454dfee74acef6f3525a17 files/digest-modutils-2.4.27 68
+MD5 f96b5ddf4c0f16f64d44e0867f5ce19c modutils-2.4.23.ebuild 1411
+MD5 86bfa45d647797304a621d9afcb33a14 modutils-2.4.24.ebuild 1338
+MD5 480bc0e8645af663fe575dcd958150bb modutils-2.4.25.ebuild 1342
+MD5 72e66328e29bdfb9aababeda22db504b modutils-2.4.26.ebuild 1356
+MD5 67d3e22cf50b9c7ce6b0b8dfb4dad401 modutils-2.4.27.ebuild 1360
 MD5 15611447c25c4be74563a4808c96aa9e files/alias.h.diff 255
 MD5 e2f752d73846ca0f1a0c6bef4e6cea96 files/digest-modutils-2.4.23 68
-MD5 bd23ddb87317bad29c6d70b7f0bfcede files/digest-modutils-2.4.25 68
-MD5 367a98cfc9d6b4ad4b87dd1a40731082 files/digest-modutils-2.4.19 68
-MD5 93cde80b9a788050c8da89dd00438190 files/digest-modutils-2.4.20 68
-MD5 2a538675787b2c0d36e17a54b7205ada files/digest-modutils-2.4.16-r2 68
-MD5 b6bb8c373b7dd0be26864cac80b0b11f files/digest-modutils-2.4.22 68
-MD5 2a538675787b2c0d36e17a54b7205ada files/digest-modutils-2.4.16-r3 68
 MD5 440c0a070f677ba12ecc3a8d59af57c8 files/digest-modutils-2.4.24 195
+MD5 bd23ddb87317bad29c6d70b7f0bfcede files/digest-modutils-2.4.25 68
 MD5 d836ad11c092b2c55cc5b398c2af485b files/digest-modutils-2.4.26 68
+MD5 123430bcca454dfee74acef6f3525a17 files/digest-modutils-2.4.27 68
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.9.10 (GNU/Linux)
+
+iD8DBQFBNx6oHTu7gpaalycRAk/WAJwKe8weNxX5zFjX5RQP6gZ6goScvQCbB/td
+8NF1Kbg/ois24QyK7GZXQHY=
+=HTiw
+-----END PGP SIGNATURE-----
