@@ -1,22 +1,23 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/modutils/modutils-2.4.23.ebuild,v 1.13 2004/07/15 01:59:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/modutils/modutils-2.4.23.ebuild,v 1.14 2004/09/02 13:20:56 vapier Exp $
 
 inherit flag-o-matic
 
 DESCRIPTION="Standard kernel module utilities"
-SRC_URI="mirror://kernel/linux/utils/kernel/modutils/v2.4/${P}.tar.bz2"
 HOMEPAGE="http://www.kernel.org/pub/linux/utils/kernel/modutils/"
+SRC_URI="mirror://kernel/linux/utils/kernel/modutils/v2.4/${P}.tar.bz2"
 
+LICENSE="GPL-2"
+SLOT="0"
 KEYWORDS="x86 -amd64 ~ppc ~sparc ~alpha ~hppa ~mips"
 IUSE=""
-SLOT="0"
-LICENSE="GPL-2"
 
-DEPEND="virtual/libc"
+DEPEND="virtual/libc
+	!virtual/modutils"
+PROVIDE="virtual/modutils"
 
 src_compile() {
-
 	filter-flags -fPIC
 
 	myconf=""
