@@ -1,17 +1,20 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/modutils/modutils-2.4.25.ebuild,v 1.24 2004/06/30 21:22:05 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/modutils/modutils-2.4.25.ebuild,v 1.25 2004/09/02 13:20:56 vapier Exp $
 
 inherit flag-o-matic
 
 DESCRIPTION="Standard kernel module utilities"
-SRC_URI="mirror://kernel/linux/utils/kernel/${PN}/v2.4/${P}.tar.bz2"
 HOMEPAGE="http://www.kernel.org/pub/linux/utils/kernel/modutils/"
+SRC_URI="mirror://kernel/linux/utils/kernel/${PN}/v2.4/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
 KEYWORDS="x86 -amd64 ppc sparc alpha hppa mips ia64"
 IUSE=""
-SLOT="0"
-LICENSE="GPL-2"
-DEPEND="virtual/libc"
+
+DEPEND="virtual/libc
+	!virtual/modutils"
 PROVIDE="virtual/modutils"
 
 src_unpack() {
@@ -50,5 +53,5 @@ src_install() {
 	fi
 	einstall prefix="${D}" ${mymake} || die "make install failed"
 
-	dodoc COPYING CREDITS ChangeLog NEWS README TODO
+	dodoc CREDITS ChangeLog NEWS README TODO
 }
